--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
   <!-- https://emmet.io/ -->
   <!-- header>h1{Test de menu} -->
   <header>
-    <button>menu</button>
+    <button>aria-controls="mainNav">menu</button>
     <h1>Test de menu</h1>
   </header>
+  <nav id="mainNav">
+    <ul>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+    </ul>
+  </nav>
   <!-- h2>lorem2^p>lorem -->
   <h2>Lorem, ipsum.</h2>
   <p>
