--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </header>
   <nav id="mainNav">
     <ul>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
+      <li><a href="#">item 1</a></li>
+      <li><a href="#">item 2</a></li>
+      <li><a href="#">item 3</a></li>
     </ul>
   </nav>
   <!-- h2>lorem2^p>lorem -->
