--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <!-- https://emmet.io/ -->
   <!-- header>h1{Test de menu} -->
   <header>
-    <button>aria-controls="mainNav">menu</button>
+    <button>aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen">
+      menu </button>
     <h1>Test de menu</h1>
-    <nav id="mainNav" x-show="menuIsOpen">
+    <nav id="mainNav" x-show="menuIsOpen" x-transition>
       <ul>
         <li><a href="#">item 1</a></li>
         <li><a href="#">item 2</a></li>
         <li><a href="#">item 3</a></li>
       </ul>
+    </nav>
     </nav>
   </header>
 
