--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       menu </button>
     <h1>Test de menu</h1>
     <nav id="mainNav" x-show="menuIsOpen" x-transition>
+      <!--On en est a personaliser la trasition mais le bouton
+      menu pose probleme -->
       <ul>
         <li><a href="#">item 1</a></li>
         <li><a href="#">item 2</a></li>
