--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
   <!-- https://emmet.io/ -->
   <!-- header>h1{Test de menu} -->
   <header>
-    <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen">Menu</button>
+    <button aria-controls="mainNav" 
+    @click="menuIsOpen = ! menuIsOpen"
+    class="header__menu-Btn"
+    >Menu</button>
     <h1>Test de menu</h1>
-    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms>
+    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms
+    class="menu"
+    >
 
       <ul>
         <li><a href="#">item 1</a></li>
