--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr" x-data="{menuIsOpen: false,
-}">
+}":class="{noscroll:menuIsOpen}">
 
 <head>
   <meta charset="UTF-8" />
@@ -22,6 +22,10 @@
 .header__menu-Btn{
   position: relative;
   z-index: 10;
+}
+.noscroll,
+.noscroll body {
+  overflow: hidden;
 }
 </style>
 </head>
