j'ai dit aux dt quils allait controler l'affichage des dd

--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@ x-data="{menuIsOpen: false, ddlorem: false, ddVolupates: false, ddQuo: false, }"
   </p>
   <dl>
     
-    <dt>Lorem.</dt>
+    <dt aria-controls="dd1">Lorem.</dt>
 <nav id="dd1" x-show="ddlorem">
     <dd>Lorem ipsum dolor sit amet.</dd>
 
   </dl></nav>
   <dl>
-    <dt>Voluptates!</dt>
+    <dt aria-controls="dd2">Voluptates!</dt>
     <nav id="dd2" x-show="ddVolupates">
     <dd>Placeat mollitia quis inventore hic?</dd>
 
   </dl>
   <dl>
-    <dt>Quo.</dt>
+    <dt aria-controls="dd3">Quo.</dt>
     <nav id="dd3" x-show="ddQuo">
     <dd>Ducimus quod non dolor quam?</dd>
 
