--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@ x-data="{menuIsOpen: false, ddlorem: false, ddVolupates: false, ddQuo: false, }"
   </p>
   <dl>
     
-    <dt aria-controls="dd1">Lorem.</dt>
+    <dt aria-controls="dd1" @click="ddlorem = ! ddlorem">Lorem.</dt>
 <nav id="dd1" x-show="ddlorem">
     <dd>Lorem ipsum dolor sit amet.</dd>
 
   </dl></nav>
   <dl>
-    <dt aria-controls="dd2">Voluptates!</dt>
+    <dt aria-controls="dd2" @click="ddVolupates = ! ddVolupates">Voluptates!</dt>
     <nav id="dd2" x-show="ddVolupates">
     <dd>Placeat mollitia quis inventore hic?</dd>
 
   </dl>
   <dl>
-    <dt aria-controls="dd3">Quo.</dt>
+    <dt aria-controls="dd3" @click="ddQuo = ! ddQuo">Quo.</dt>
     <nav id="dd3" x-show="ddQuo">
     <dd>Ducimus quod non dolor quam?</dd>
 
