j'ai remis le x data dans le dl

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <nav id="dd2" x-show="ddVolupates" x-transition.duration.500ms>
       <dd>Placeat mollitia quis inventore hic?</dd>
 
-  </dl x-data="{ddQuo: false}">
-  <dl>
+  </dl>
+  <dl x-data="{ddQuo: false}">
     <dt aria-controls="dd3" @click="ddQuo = ! ddQuo">Quo.</dt>
     <nav id="dd3" x-show="ddQuo" x-transition.duration.500ms>
       <dd>Ducimus quod non dolor quam?</dd>
