Ajout de dossiers

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Test menu</title>
+  <link rel="stylesheet" href="src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
   <style>
     .menu {
@@ -40,8 +41,8 @@
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
 
       <ul>
-        <li><a href="#">item 1</a></li>
-        <li><a href="#">item 2</a></li>
+        <li><a href="cats/index.html">Les chats</a></li>
+        <li><a href="dogs/index.html">Les chiens</a></li>
         <li><a href="#">item 3</a></li>
       </ul>
     </nav>
@@ -76,6 +77,7 @@
       <dd>Ducimus quod non dolor quam?</dd>
 
   </dl>
+
 </body>
 
 </html>
