--- a/cats/index.html
+++ b/cats/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+    <ul>
+        <li><a href="cats/chat-1.html">chat 1</a></li>
+        <li><a href="cats/chat-2.html">chat 2</a></li>
+    </ul>
 </body>
 
 </html>
