jai mis les fichier chiens/chats

--- a/dogs/index.html
+++ b/dogs/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil chiens</title>
+    <title>Accueil chats</title>
     <link rel="stylesheet" href="../src/css/styles.css">
 </head>
 
 <body>
-
+    <ul>
+        <li><a href="dogs/chien-1.html">chien 1</a></li>
+        <li><a href="dogs/chien-2.html">chien 2</a></li>
+    </ul>
 </body>
 
 </html>
