--- a/cats/index.html
+++ b/cats/index.html
@@ -18,16 +18,16 @@
           <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
       
             <ul>
-              <li><a href="cats/index.html">Les chats</a></li>
-              <li><a href="dogs/index.html">Les chiens</a></li>
-              <li><a href="#">item 3</a></li>
+                <li><a href="../cats/index.html">Les chats </a></li>
+                <li><a href="../dogs/index.html">Les chiens </a></li>
+                <li><a href="../index.html">Index </a></li>
             </ul>
           </nav>
           </nav>
         </header>
     <ul>
-        <li><a href="dogs/chien-1.html">chat 1</a></li>
-        <li><a href="dogs/chien-2.html">chat 2</a></li>
+        <li><a href="../cats/chat-1.html">chat 1</a></li>
+        <li><a href="../cats/chat-2.html">chat 2</a></li>
     </ul>
 </body>
 
