--- a/dogs/index.html
+++ b/dogs/index.html
@@ -14,7 +14,7 @@
     <body>
         <header>
           <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">Menu</button>
-          <h1>Les chiens</h1>
+          <h1>Les chiens !</h1>
           <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
       
             <ul>
@@ -26,8 +26,8 @@
           </nav>
         </header>
     <ul>
-        <li><a href="dogs/chien-1.html">chien 1</a></li>
-        <li><a href="dogs/chien-2.html">chien 2</a></li>
+        <li><a href="../dogs/chien-1.html">chien 1</a></li>
+        <li><a href="../dogs/chien-2.html">chien 2</a></li>
     </ul>
 </body>
 
