jai fait un sens de lecture

--- a/cats/chat-1.html
+++ b/cats/chat-1.html
@@ -26,7 +26,7 @@
           </nav>
         </header>
     <ul>
-        <li><a href="../cats/chat-1.html">chat 1</a></li>
+        <li><a href="../cats/chat-2.html">Suivant</a></li>
     </ul>
 </body>
 
