--- a/cats/chat-2.html
+++ b/cats/chat-2.html
@@ -26,8 +26,8 @@
           </nav>
         </header>
     <ul>
-        <li><a href="../cats/chat-2.html">chat 2</a></li>
+        <li><a href="../cats/chat-1.html">Précédent</a></li>
     </ul>
 </body>
 
-</html>
+</html>Z
