--- a/dogs/chien-1.html
+++ b/dogs/chien-1.html
@@ -26,7 +26,7 @@
           </nav>
         </header>
     <ul>
-        <li><a href="../dogs/chien-2.html">chien 2</a></li>
+        <li><a href="../dogs/chien-2.html">Suivant</a></li>
     </ul>
 </body>
 
