--- a/dogs/index.html
+++ b/dogs/index.html
@@ -26,8 +26,7 @@
           </nav>
         </header>
     <ul>
-        <li><a href="../dogs/chien-1.html">chien 1</a></li>
-        <li><a href="../dogs/chien-2.html">chien 2</a></li>
+        <li><a href="../dogs/chien-1.html">Voir les chiens</a></li>
     </ul>
 </body>
 
