--- a/cats/index.html
+++ b/cats/index.html
@@ -26,8 +26,7 @@
           </nav>
         </header>
     <ul>
-        <li><a href="../cats/chat-1.html">chat 1</a></li>
-        <li><a href="../cats/chat-2.html">chat 2</a></li>
+        <li><a href="../cats/chat-1.html">Voir les chats</a></li>
     </ul>
 </body>
 
