CONTENUS CHIENS FAIT

--- a/dogs/chien-2.html
+++ b/dogs/chien-2.html
@@ -14,7 +14,7 @@
     <body>
         <header>
           <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">Menu</button>
-          <h1>Les chiens</h1>
+          <h1>Chien 2</h1>
           <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
       
             <ul>
@@ -25,7 +25,11 @@
           </nav>
           </nav>
         </header>
-    <ul>
+    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam aut sequi.</p>
+        <img src="../public/img/dogs/Dog_(Canis_lupus_familiaris)_(2).jpg" alt="Imge de chien">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
+        <ul>
         <li><a href="../dogs/chien-1.html">Précédent</a></li>
     </ul>
 </body>
