--- a/cats/index.html
+++ b/cats/index.html
@@ -28,6 +28,11 @@
     <ul>
         <li><a href="../cats/chat-1.html">Voir les chats</a></li>
     </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
+    <h2>Nous avons aussi des chiens</h2>
+    <ul>
+        <li><a href="../dogs/chien-1.html">Voir les chiens</a></li>
+    </ul>
 </body>
 
 </html>
