--- a/dogs/index.html
+++ b/dogs/index.html
@@ -27,6 +27,15 @@
         </header>
     <ul>
         <li><a href="../dogs/chien-1.html">Voir les chiens</a></li>
+       
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
+    <img class="media media--fullwidth" src="../public/img/dogs/2017-05-01_AT_Wien_02_Leopoldstadt,_Prater,_Canis_lupus_familiaris_(51363929499).jpg" alt="image de chien">
+    <img class="media media--fullwidth" src="../public/img/dogs/20160303_-_Canis_lupus_familiaris_3.jpg" alt="image de chien">
+    
+    <h2>Nous avons aussi des chats</h2>
+    <ul>
+     <li><a href="../cats/chat-1.html">Voir les chats</a></li>
     </ul>
 </body>
 
