CONTENU CHAT OK

--- a/cats/index.html
+++ b/cats/index.html
@@ -29,9 +29,11 @@
         <li><a href="../cats/chat-1.html">Voir les chats</a></li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
+    <img class="media media--fullwidth" src="../public/img/cats/640px-Main_coon_cat.jpg" alt="image de chat">
+    <img class="media media--fullwidth" src="../public/img/cats/Chat_croisé_Siamois_rue_des_Sorciers.jpg" alt="image de chat">
     <h2>Nous avons aussi des chiens</h2>
     <ul>
-        <li><a href="../dogs/chien-1.html">Voir les chiens</a></li>
+        <li><a href="../dogs/index.html">Voir les chiens</a></li>
     </ul>
 </body>
 
