--- a/dogs/chien-2.html
+++ b/dogs/chien-2.html
@@ -27,7 +27,7 @@
         </header>
     
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam aut sequi.</p>
-        <img src="../public/img/dogs/Dog_(Canis_lupus_familiaris)_(2).jpg" alt="Imge de chien">
+        <img class="media media--fullwidth" src="../public/img/dogs/Dog_(Canis_lupus_familiaris)_(2).jpg" alt="Imge de chien">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
         <ul>
         <li><a href="../dogs/chien-1.html">Précédent</a></li>
