--- a/dogs/index.html
+++ b/dogs/index.html
@@ -35,7 +35,7 @@
     
     <h2>Nous avons aussi des chats</h2>
     <ul>
-     <li><a href="../cats/chat-1.html">Voir les chats</a></li>
+     <li><a href="../cats/index.html">Voir les chats</a></li>
     </ul>
 </body>
 
