--- a/cats/chat-1.html
+++ b/cats/chat-1.html
@@ -14,7 +14,7 @@
     <body>
         <header>
           <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">Menu</button>
-          <h1>Les chats !</h1>
+          <h1>Chat 1</h1>
           <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
       
             <ul>
@@ -25,6 +25,9 @@
           </nav>
           </nav>
         </header>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam aut sequi.</p>
+        <img class="media media--fullwidth" src="../public/img/cats/Chat_persan_chinchilla.jpg" alt="Imge de chien">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
         
     <ul>
         <li><a href="../cats/chat-2.html">Suivant</a></li>
