--- a/dogs/chien-1.html
+++ b/dogs/chien-1.html
@@ -26,7 +26,7 @@
           </nav>
         </header>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam aut sequi.</p>
-        <img src="../public/img/dogs/640px-Cane_corso_głowa_profil_493o.jpg" alt="Imge de chien">
+        <img class="media media--fullwidth" src="../public/img/dogs/640px-Cane_corso_głowa_profil_493o.jpg" alt="Imge de chien">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
     <ul>
         <li><a href="../dogs/chien-2.html">Suivant</a></li>
