--- a/cats/index.html
+++ b/cats/index.html
@@ -18,9 +18,9 @@
           <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
       
             <ul>
-                <li><a href="../cats/index.html">Les chats </a></li>
-                <li><a href="../dogs/index.html">Les chiens </a></li>
-                <li><a href="../index.html">Index </a></li>
+                <li><a href="../cats/index.html" class="cat">Les chats </a></li>
+                <li><a href="../dogs/index.html" class="dog">Les chiens </a></li>
+                <li><a href="../index.html" class="house">Index </a></li>
             </ul>
           </nav>
           </nav>
