--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <img class="house" src="public/icones/house.svg" alt="Accueil">
     <article>
     </a>
-    <img class="Hamburger" src="public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">
+    <img src="public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
+    <img src="public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
       <ul>
         <li ><a href="cats/index.html"class="cat">Les chats</a></li>
@@ -30,14 +31,17 @@
   </header> 
 
   <h1>Animaux de compagnie</h1>
-  <!-- h2>lorem2^p>lorem -->
-  <h2>Lorem, ipsum.</h2>
-  <p> 
+<p> 
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat
-    mollitia adipisci alias error laboriosam numquam incidunt magni eum eos
-    nemo aliquid pariatur quam voluptates animi laudantium, aperiam
-    consectetur nobis enim.
+    mollitia adipisci alias quibusdam, voluptates, quidem, quas
   </p>
+  <section class="container">
+<img class="image" src="public/img/home/andrew-s-ouo1hbizWwo-unsplash.jpg" alt="image du home">
+<img class="image" src="public/img/home/pexels-alexander-grey-1909802.jpg" alt="image du home"> </section>
+
+  <!-- h2>lorem2^p>lorem -->
+  <h2>Acordeon</h2>
+  
   <dl x-data="{ddlorem: false}">
 
     <dt aria-controls="dd1" @click="ddlorem = ! ddlorem">Lorem.<img class="logoaccordeon" src="public/icones/plus.svg" alt="logo plus"></dt>
