--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </a>
     <img src="public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
     <img src="public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
-    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
+    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu"  style="display : none">
       <ul>
         <li ><a href="cats/index.html"class="cat">Les chats</a></li>
         <li><a href="dogs/index.html" class="dog">Les chiens</a></li>
