Update cat section title and center align images

--- a/cats/index.html
+++ b/cats/index.html
@@ -38,7 +38,7 @@
     <img class="image" src="../public/img/cats/pexels-amber-janssens-6897077.jpg" alt="image de chat">
     <img class="image" src="../public/img/cats/borna-bevanda-VwqecUsYKvs-unsplash.jpg" alt="image de chat">
     </section>
-    <h2>Nous avons aussi des chiens</h2>
+    <h2 class="title">Nous avons aussi des chiens</h2>
 
         <h3 class="click"><a href="../dogs/index.html">Voir nos chiens</a></h3>
 
