--- a/cats/chat-1.html
+++ b/cats/chat-1.html
@@ -20,20 +20,21 @@
   <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
   <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu"  style="display : none">
     <ul>
-      <li ><a href="cats/index.html"class="cat">Les chats</a></li>
-      <li><a href="dogs/index.html" class="dog">Les chiens</a></li>
+      <li ><a href='/cats/'class="cat">Les chats</a></li>
+      <li><a href='/dogs/' class="dog">Les chiens</a></li>
     </ul>
   </nav>
   </nav>
 </article>
 </header> 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam aut sequi.</p>
-        <img class="media media--fullwidth" src="../public/img/cats/Chat_persan_chinchilla.jpg" alt="Imge de chien">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
-        
-    <ul>
-        <li><a href="../cats/chat-2.html">Suivant</a></li>
-    </ul>
+<h1>Les chats écaille de tortue</h1>
+<p>Le saviez vous? Les chat avec cette couleur de robe sont presque exclusivement des femelles</p>
+  
+  <section class="container">
+<img class="image" src="../public/img/cats/gabriella-clare-marino-tuQ5_6QJUTM-unsplash.jpg" alt="image de chat">
+<img class="image" src="../public/img/cats/pexels-just-a-couple-photos-3777622.jpg" alt="image de chat">
+</section>
+     <p class="click"></pclass><a href="../cats/chat-2.html">Suivant</a></p>
 </body>
 
 </html>
