--- a/cats/chat-2.html
+++ b/cats/chat-2.html
@@ -20,8 +20,8 @@
   <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
   <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu"  style="display : none">
     <ul>
-      <li ><a href="cats/index.html"class="cat">Les chats</a></li>
-      <li><a href="dogs/index.html" class="dog">Les chiens</a></li>
+      <li ><a href='/cats/' class="cat">Les chats</a></li>
+      <li><a href='/dogs/' class="dog">Les chiens</a></li>
     </ul>
   </nav>
   </nav>
@@ -31,7 +31,7 @@
         <img class="media media--fullwidth" src="../public/img/cats/Siamois_Chaton.jpg" alt="Imge de chien">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
     <ul>
-        <li><a href="../cats/chat-1.html">Précédent</a></li>
+        <li><a href='/cats/chat-1.html'>Précédent</a></li>
     </ul>
 </body>
 
