--- a/cats/index.html
+++ b/cats/index.html
@@ -20,8 +20,8 @@
       <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
       <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu"  style="display : none">
         <ul>
-          <li ><a href="cats/index.html"class="cat">Les chats</a></li>
-          <li><a href="dogs/index.html" class="dog">Les chiens</a></li>
+          <li ><a href='/cats/' class="cat">Les chats</a></li>
+          <li><a href='/dogs/' class="dog">Les chiens</a></li>
         </ul>
       </nav>
       </nav>
@@ -32,14 +32,14 @@
       
  
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
-      <h3 class="click"><a href="../cats/chat-1.html">Voir nos chats</a></h3>
+      <h3 class="click"><a href='/cats/chat-1.html'>Voir nos chats</a></h3>
       <section class="container">
-    <img class="image" src="../public/img/cats/pexels-amber-janssens-6897077.jpg" alt="image de chat">
+    <img class="image" src='/public/img/cats/pexels-amber-janssens-6897077.jpg' alt="image de chat">
     <img class="image" src="../public/img/cats/borna-bevanda-VwqecUsYKvs-unsplash.jpg" alt="image de chat">
     </section>
     <h2 class="title">Nous avons aussi des chiens</h2>
 
-        <h3 class="click"><a href="../dogs/index.html">Voir nos chiens</a></h3>
+        <h3 class="click"><a href='/dogs/'>Voir nos chiens</a></h3>
 
 </body>
 
