contenu des chats ok

--- a/cats/chat-2.html
+++ b/cats/chat-2.html
@@ -27,12 +27,18 @@
   </nav>
 </article>
 </header> 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam aut sequi.</p>
-        <img class="media media--fullwidth" src="../public/img/cats/Siamois_Chaton.jpg" alt="Imge de chien">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
-    <ul>
-        <li><a href='/cats/chat-1.html'>Précédent</a></li>
-    </ul>
+<h1>Les chats</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatibus minima quidem fugit neque adipisci ad repellendus officiis eaque quasi aspernatur magni quos, ipsam, ducimus delectus accusantium quo soluta dolores.</p>
+  
+  <section class="container">
+<img class="image" src="../public/img/cats/wren-meinberg-AL2-t0GrSko-unsplash.jpg" alt="image de chat">
+<img class="image" src="../public/img/cats/pexels-wojciech-kumpicki-2071882.jpg" alt="image de chat">
+</section>
+
+<p class="click"><a href='/cats/chat-1.html'>Précédent</a></p>
+<h2 class="title">Nous avons aussi des chiens !</h2>
+<p class="click"><a href='/dogs/'>Voir nos chiens</a></p>
+    
 </body>
 
 </html>
