Update cat and dog pages

--- a/cats/chat-2.html
+++ b/cats/chat-2.html
@@ -28,7 +28,7 @@
 </article>
 </header> 
 <h1>Les chats</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatibus minima quidem fugit neque adipisci ad repellendus officiis eaque quasi aspernatur magni quos, ipsam, ducimus delectus accusantium quo soluta dolores.</p>
+<p>Fun fact : Les chats passent environ 16h par jour à dormir</p>
   
   <section class="container">
 <img class="image" src="../public/img/cats/wren-meinberg-AL2-t0GrSko-unsplash.jpg" alt="image de chat">
