--- a/dogs/chien-2.html
+++ b/dogs/chien-2.html
@@ -11,27 +11,32 @@
 </head>
 
 <body>
-    <body>
-        <header>
-          <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">Menu</button>
-          <h1>Chien 2</h1>
-          <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
-      
-            <ul>
-              <li><a href="../cats/index.html" class="cat">Les chats </a></li>
-              <li><a href="../dogs/index.html" class="dog">Les chiens </a></li>
-              <li><a href="../index.html" class="house">Index </a></li>
-            </ul>
-          </nav>
-          </nav>
-        </header>
-    
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam aut sequi.</p>
-        <img class="media media--fullwidth" src="../public/img/dogs/Dog_(Canis_lupus_familiaris)_(2).jpg" alt="Imge de chien">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.</p>
-        <ul>
-        <li><a href="../dogs/chien-1.html">Précédent</a></li>
+  <header>
+    <a href='/'>
+    <img class="house" src="../public/icones/house.svg" alt="Accueil">
+  <article>
+  </a>
+  <img src="../public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
+  <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
+  <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu"  style="display : none">
+    <ul>
+      <li ><a href='/cats/'class="cat">Les chats</a></li>
+      <li><a href='/dogs/' class="dog">Les chiens</a></li>
     </ul>
+  </nav>
+  </nav>
+</article>
+</header>
+<h1>Les huskys Sibériens</h1>
+<p>Ce sont des chiens qui sont originairement des chiens de traîneau. </p>
+  
+  <section class="container">
+<img class="image" src="../public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
+<img class="image" src="../public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
+</section>
+     <p class="click"><a href="../dogs/chien-1.html">Précédent</a></p>
+     <h2 class="title">Nous avons aussi des chats</h2>
+     <p class="click"><a href='/cats/'>Voir nos chats</a></p>
 </body>
 
 </html>
