Fix links and formatting in HTML files

--- a/cats/chat-1.html
+++ b/cats/chat-1.html
@@ -34,8 +34,8 @@
   <section class="container">
 <img class="image" src="../public/img/cats/gabriella-clare-marino-tuQ5_6QJUTM-unsplash.jpg" alt="image de chat">
 <img class="image" src="../public/img/cats/pexels-just-a-couple-photos-3777622.jpg" alt="image de chat">
-</section>
-     <p class="click"></pclass><a href="../cats/chat-2.html">Suivant</a></p>
+</section><a href="../cats/chat-2.html">
+     <p class="click">Suivant</p></a>
 </body>
 
 </html>
