--- a/cats/index.html
+++ b/cats/index.html
@@ -33,15 +33,17 @@
       
  
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
-      <h3 class="click"><a href='/cats/chat-1.html'>Voir nos chats</a></h3>
+    <a href='/cats/chat-1.html'>  
+    <h3 class="click">Voir nos chats</h3>
+  </a>
       <section class="container">
     <img class="image" src='/public/img/cats/pexels-amber-janssens-6897077.jpg' alt="image de chat">
     <img class="image" src="../public/img/cats/borna-bevanda-VwqecUsYKvs-unsplash.jpg" alt="image de chat">
     </section>
     <h2 class="title">Nous avons aussi des chiens</h2>
-
-        <h3 class="click"><a href='/dogs/'>Voir nos chiens</a></h3>
-
+<a href='/dogs/'>
+        <h3 class="click">Voir nos chiens</h3>
+</a>
 </body>
 
 </html>
