--- a/dogs/chien-1.html
+++ b/dogs/chien-1.html
@@ -35,7 +35,8 @@
 <img class="image" src="../public/img/dogs/lovovna-6DotGLw-tY8-unsplash.jpg" alt="image de chien">
 <img class="image" src="../public/img/dogs/pexels-dominika-roseclay-2679612.jpg" alt="image de chien">
 </section>
-     <p class="click"><a href="../dogs/chien-2.html">Suivant</a></p>
+<a href="../dogs/chien-2.html">
+     <p class="click">Suivant</p></a>
 </body>
 
 </html>
