--- a/dogs/chien-2.html
+++ b/dogs/chien-2.html
@@ -35,9 +35,9 @@
 <img class="image" src="../public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
 <img class="image" src="../public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
 </section>
-     <p class="click"><a href="../dogs/chien-1.html">Précédent</a></p>
+     <a href="../dogs/chien-1.html"><p class="click">Précédent</p></a>
      <h2 class="title">Nous avons aussi des chats</h2>
-     <p class="click"><a href='/cats/'>Voir nos chats</a></p>
+     <a href='/cats/'><p class="click">Voir nos chats</p></a>
 </body>
 
 </html>
