--- a/dogs/index.html
+++ b/dogs/index.html
@@ -33,13 +33,13 @@
       
  
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
-      <h3 class="click"><a href='/dogs/chien-1.html'>Voir nos chiens</a></h3>
+     <a href='/dogs/chien-1.html'> <h3 class="click">Voir nos chiens</h3></a>
       <section class="container">
     <img class="image" src='/public/img/dogs/pexels-pixabay-220938.jpg' alt="image de chien">
     <img class="image" src="../public/img/dogs/taylor-kopel-WX4i1Jq_o0Y-unsplash.jpg" alt="image de chien">
     </section>
     <h2 class="title">Nous avons aussi des chats</h2>
-        <h3 class="click"><a href='/cats/'>Voir nos chats</a></h3>
+       <a href='/cats/'> <h3 class="click">Voir nos chats</h3></a>
 
 </body>
 
