--- a/cats/chat-2.html
+++ b/cats/chat-2.html
@@ -35,10 +35,11 @@
 <img class="image" src="../public/img/cats/wren-meinberg-AL2-t0GrSko-unsplash.jpg" alt="image de chat">
 <img class="image" src="../public/img/cats/pexels-wojciech-kumpicki-2071882.jpg" alt="image de chat">
 </section>
-
-<p class="click"><a href='/cats/chat-1.html'>Précédent</a></p>
+<a href='/cats/chat-1.html'>
+<p class="click">Précédent</p></a>
 <h2 class="title">Nous avons aussi des chiens !</h2>
-<p class="click"><a href='/dogs/'>Voir nos chiens</a></p>
+<a href='/dogs/'>
+<p class="click">Voir nos chiens</p></a>
     
 </body>
 
