--- a/cats/chat-2.html
+++ b/cats/chat-2.html
@@ -7,40 +7,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Les chats !</title>
   <link rel="icon" href='/public/icones/animals.svg'>
-    <link rel="stylesheet" href="../src/css/styles.css">
-    <script defer src="https://unpkg.com/alpinejs"></script>
+  <link rel="stylesheet" href="../src/css/styles.css">
+  <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
 <body>
-  <header>
+  <<<<<<< HEAD <header>
     <a href='/'>
-    <img class="house" src="../public/icones/house.svg" alt="Accueil">
-  <article>
-  </a>
-  <img src="../public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
-  <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
-  <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu"  style="display : none">
-    <ul>
-      <li ><a href='/cats/' class="cat">Les chats</a></li>
-      <li><a href='/dogs/' class="dog">Les chiens</a></li>
-    </ul>
-  </nav>
-  </nav>
-</article>
-</header> 
-<h1>Les chats</h1>
-<p>Fun fact : Les chats passent environ 16h par jour à dormir</p>
-  
-  <section class="container">
-<img class="image" src="../public/img/cats/wren-meinberg-AL2-t0GrSko-unsplash.jpg" alt="image de chat">
-<img class="image" src="../public/img/cats/pexels-wojciech-kumpicki-2071882.jpg" alt="image de chat">
-</section>
-<a href='/cats/chat-1.html'>
-<p class="click">Précédent</p></a>
-<h2 class="title">Nous avons aussi des chiens !</h2>
-<a href='/dogs/'>
-<p class="click">Voir nos chiens</p></a>
-    
-</body>
+      <img class="house" src="../public/icones/house.svg" alt="Accueil">
+      <article>
+    </a>
+    <img src="../public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav"
+      @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
+    <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav"
+      @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
+    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
+      <ul>
+        <li><a href='/cats/' class="cat">Les chats</a></li>
+        <li><a href='/dogs/' class="dog">Les chiens</a></li>
+      </ul>
+    </nav>
+    </nav>
+    </article>
+    </header>
+    <h1>Les chats</h1>
+    <p>Fun fact : Les chats passent environ 16h par jour à dormir</p>
+
+    <section class="container">
+      <img class="image" src="../public/img/cats/wren-meinberg-AL2-t0GrSko-unsplash.jpg" alt="image de chat">
+      <img class="image" src="../public/img/cats/pexels-wojciech-kumpicki-2071882.jpg" alt="image de chat">
+    </section>
+    <a href='/cats/chat-1.html'>
+      <p class="click">Précédent</p>
+    </a>
+    <h2 class="title">Nous avons aussi des chiens !</h2>
+    <a href='/dogs/'>
+      <p class="click">Voir nos chiens</p>
+    </a>
+
+    =======
+
+    <body>
+      <header>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">Menu</button>
+        <h1>Chat 2</h1>
+        <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
+
+          <ul>
+            <li><a href="../cats/index.html" class="cat">Les chats </a></li>
+            <li><a href="../dogs/index.html" class="dog">Les chiens </a></li>
+            <li><a href="../index.html" class="house">Index </a></li>
+          </ul>
+        </nav>
+        </nav>
+      </header>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam
+        aut sequi.</p>
+      <img class="media media--fullwidth" src="../public/img/cats/Siamois_Chaton.jpg" alt="Imge de chien">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla
+        doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.
+      </p>
+      <ul>
+        <li><a href="../cats/chat-1.html">Précédent</a></li>
+      </ul>
+      >>>>>>> c839b3d (Refactor CSS and update navigation in HTML)
+    </body>
 
 </html>
