--- a/dogs/chien-2.html
+++ b/dogs/chien-2.html
@@ -7,37 +7,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Les chiens !</title>
   <link rel="icon" href='/public/icones/animals.svg'>
-    <link rel="stylesheet" href="../src/css/styles.css">
-    <script defer src="https://unpkg.com/alpinejs"></script>
+  <link rel="stylesheet" href="../src/css/styles.css">
+  <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
 <body>
-  <header>
+  <<<<<<< HEAD <header>
     <a href='/'>
-    <img class="house" src="../public/icones/house.svg" alt="Accueil">
-  <article>
-  </a>
-  <img src="../public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
-  <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
-  <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu"  style="display : none">
-    <ul>
-      <li ><a href='/cats/'class="cat">Les chats</a></li>
-      <li><a href='/dogs/' class="dog">Les chiens</a></li>
-    </ul>
-  </nav>
-  </nav>
-</article>
-</header>
-<h1>Les huskys Sibériens</h1>
-<p>Ce sont des chiens qui sont originairement des chiens de traîneau. </p>
-  
-  <section class="container">
-<img class="image" src="../public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
-<img class="image" src="../public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
-</section>
-     <a href="../dogs/chien-1.html"><p class="click">Précédent</p></a>
-     <h2 class="title">Nous avons aussi des chats</h2>
-     <a href='/cats/'><p class="click">Voir nos chats</p></a>
-</body>
+      <img class="house" src="../public/icones/house.svg" alt="Accueil">
+      <article>
+    </a>
+    <img src="../public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav"
+      @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
+    <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav"
+      @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
+    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
+      <ul>
+        <li><a href='/cats/' class="cat">Les chats</a></li>
+        <li><a href='/dogs/' class="dog">Les chiens</a></li>
+      </ul>
+    </nav>
+    </nav>
+    </article>
+    </header>
+    <h1>Les huskys Sibériens</h1>
+    <p>Ce sont des chiens qui sont originairement des chiens de traîneau. </p>
+
+    <section class="container">
+      <img class="image" src="../public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
+      <img class="image" src="../public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
+    </section>
+    <a href="../dogs/chien-1.html">
+      <p class="click">Précédent</p>
+    </a>
+    <h2 class="title">Nous avons aussi des chats</h2>
+    <a href='/cats/'>
+      <p class="click">Voir nos chats</p>
+    </a>
+    =======
+
+    <body>
+      <header>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">Menu</button>
+        <h1>Chien 2</h1>
+        <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
+
+          <ul>
+            <li><a href="../cats/index.html" class="cat">Les chats </a></li>
+            <li><a href="../dogs/index.html" class="dog">Les chiens </a></li>
+            <li><a href="../index.html" class="house">Index </a></li>
+          </ul>
+        </nav>
+        </nav>
+      </header>
+
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, consectetur. Alias dolores nulla, animi in totam
+        aut sequi.</p>
+      <img class="media media--fullwidth" src="../public/img/dogs/Dog_(Canis_lupus_familiaris)_(2).jpg"
+        alt="Imge de chien">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis iste molestiae! Quasi esse nulla
+        doloribus maiores! Nesciunt, qui reiciendis necessitatibus aliquid, harum cum quae at ducimus ut dolores eum.
+      </p>
+      <ul>
+        <li><a href="../dogs/chien-1.html">Précédent</a></li>
+      </ul>
+      >>>>>>> c839b3d (Refactor CSS and update navigation in HTML)
+    </body>
 
 </html>
