j'ai ajouter l'index et ajouster les lins pours qu'ils soient bons

--- a/en/cats/chat-1.html
+++ b/en/cats/chat-1.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="/en/index.html">
       <img class="house" src="/public/icones/house.svg" alt="Accueil">
       <article>
     </a>
@@ -23,8 +23,8 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/fr/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/fr/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
       </ul>
     </nav>
     </nav>
@@ -36,7 +36,7 @@
   <section class="container">
     <img class="image" src="/public/img/cats/gabriella-clare-marino-tuQ5_6QJUTM-unsplash.jpg" alt="image de chat">
     <img class="image" src="/public/img/cats/pexels-just-a-couple-photos-3777622.jpg" alt="image de chat">
-  </section><a href="/fr/cats/chat-2.html">
+  </section><a href="/en/cats/chat-2.html">
     <p class="click">Suivant</p>
   </a>
 </body>
