--- a/en/cats/chat-2.html
+++ b/en/cats/chat-2.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="/en/index.html">
       <img class="house" src="/public/icones/house.svg" alt="Accueil">
       <article>
     </a>
@@ -23,8 +23,8 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/fr/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/fr/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
       </ul>
     </nav>
     </nav>
@@ -37,11 +37,11 @@
     <img class="image" src="/public/img/cats/wren-meinberg-AL2-t0GrSko-unsplash.jpg" alt="image de chat">
     <img class="image" src="/public/img/cats/pexels-wojciech-kumpicki-2071882.jpg" alt="image de chat">
   </section>
-  <a href="/fr/cats/chat-1.html">
+  <a href="/en/cats/chat-1.html">
     <p class="click">Précédent</p>
   </a>
   <h2 class="title">Nous avons aussi des chiens !</h2>
-  <a href="/fr/dogs/index.html">
+  <a href="/en/dogs/index.html">
     <p class="click">Voir nos chiens</p>
   </a>
 
