--- a/en/cats/index.html
+++ b/en/cats/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="/en/index.html">
       <img class="house" src="/public/icones/house.svg" alt="Accueil">
       <article>
     </a>
@@ -23,8 +23,8 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/fr/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/fr/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
       </ul>
     </nav>
     </nav>
@@ -36,7 +36,7 @@
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo
     doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
-  <a href="/fr/cats/chat-1.html">
+  <a href="/en/cats/chat-1.html">
     <h3 class="click">Voir nos chats</h3>
   </a>
   <section class="container">
@@ -44,7 +44,7 @@
     <img class="image" src="/public/img/cats/borna-bevanda-VwqecUsYKvs-unsplash.jpg" alt="image de chat">
   </section>
   <h2 class="title">Nous avons aussi des chiens</h2>
-  <a href="/fr/dogs/index.html"">
+  <a href="/en/dogs/index.html"">
     <h3 class=" click">Voir nos chiens</h3>
   </a>
 </body>
