--- a/en/dogs/chien-2.html
+++ b/en/dogs/chien-2.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="/en/index.html">
       <img class="house" src="/public/icones/house.svg" alt="Accueil">
       <article>
     </a>
@@ -23,8 +23,8 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/fr/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/fr/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
       </ul>
     </nav>
     </nav>
@@ -37,11 +37,11 @@
     <img class="image" src="/public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
     <img class="image" src="/public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
   </section>
-  <a href="/fr/dogs/chien-1.html">
+  <a href="/en/dogs/chien-1.html">
     <p class="click">Précédent</p>
   </a>
   <h2 class="title">Nous avons aussi des chats</h2>
-  <a href="/fr/cats/index.html">
+  <a href="/en/cats/index.html">
     <p class="click">Voir nos chats</p>
   </a>
 </body>
