--- a/fr/dogs/index.html
+++ b/fr/dogs/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="/fr/index.html">
       <img class="house" src="/public/icones/house.svg" alt="Accueil">
       <article>
     </a>
