Faire un /index.html ayant deux liens

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <!-- header>h1{Test de menu} -->
 
   <nav>
+    <h1>What language do you speak?</h1>
     <ul>
-      <li><a href="/fr/">Francais</a></li>
-      <li><a href="/en/">English</a></li>
+      <li class="langue"><a href="/fr/">Francais</a></li>
+      <li class="langue"><a href="/en/">English</a></li>
     </ul>
   </nav>
 
